--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "@playwright/test": "^1.42.1",
     "@types/node": "^20.11.25"
+  },
+  "dependencies": {
+    "puppeteer": "^22.5.0"
   }
 }
